@@ -1,3 +1,6 @@
+r308 (19. 02. 2025):
+Fixed a crash in inaccurate trackers
+
 r307 (18. 02. 2025):
 Lost in Transit: Fixed a crash after interacting with the crane
 
